Minimized the padding of the default button class to avoid button collapse

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -2,7 +2,7 @@
 
 .btn {
     border: none;
-    padding: 1em 3.5em;
+    padding: 1em 2em;
     background-color: u.$main-color;
     color: u.$light-color;
     border-radius: u.em(5);
